ursus.esri.com replaced with localhost

--- a/WorkerTrackingFullDemo.html
+++ b/WorkerTrackingFullDemo.html
@@ -266,7 +266,7 @@
            *
            **********************************************************************************/
           function addIncidentStreamLayer(){
-            var url = "ws://ursus.esri.com:6180/workerincident";
+            var url = "ws://localhost:6180/workerincident";
 
             var layerDefinition = {
               "geometryType": "esriGeometryPoint",
